--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
 .well {
   font-family: monospace;
 }
+
+.title {
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+}
+
+.subtitle {
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+    text-align: center;
+    opacity: 0.5;
+}
